# ext-clickhouse-pdo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  clickhouse_driver.c  clickhouse_driver_methods.c  clickhouse_helpers.c  clickhouse_statement.c  config.m4  pdo_clickhouse.c  php_pdo_clickhouse.h  php_pdo_clickhouse_int.h
.github/workflows/: ci.yml
tests/: 001-connection.phpt  002-simple-query.phpt  003-create-table.phpt  004-prepared-statements.phpt  005-fetch-modes.phpt  006-insert-from-string.phpt  007-callbacks.phpt  008-prepared-bindings.phpt  009-basic-operations.phpt  010-optional-features.phpt  011-async-queries.phpt  012-compression.phpt  013-query-id.phpt  014-connection-management.phpt  015-timeout.phpt  016-execute-batch.phpt  017-insert-from-file.phpt  018-ssl-config.phpt  019-log-callback.phpt  020-named-parameters.phpt  021-positional-parameters.phpt  022-mixed-parameters.phpt  023-no-clickhouse-native-syntax.phpt  101-get-server-info.phpt  102-get-databases.phpt  103-describe-table.phpt  104-query-settings.phpt  README.md  pdo_clickhouse_transactions.phpt
